log
Thu Mar 26 07:05:58 PM UTC 2026: 
 tests:  12|0
total_score: 60/60
fe4bf91
Thu Mar 26 07:07:35 PM UTC 2026: 
 list.c | 75 ++++++------------------------------------------------------------
 1 file changed, 6 insertions(+), 69 deletions(-)
 tests:  0|6
total_score: 0/60
81f64a3
Thu Mar 26 07:18:00 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/60
fa8efca
Thu Mar 26 07:26:38 PM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
37d7b0b
Thu Mar 26 07:29:32 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:98:22: error: ‘der’ undeclared (first use in this function)
   98 |         list->head = der;
      |                      ^~~
list.c:98:22: note: each undeclared identifier is reported only once for each function it appears in
aa99f88
Thu Mar 26 07:30:06 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
df24c3d
Thu Mar 26 07:30:54 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
f8f83fa
Thu Mar 26 07:34:08 PM UTC 2026: 
 list.c | 9 +--------
 1 file changed, 1 insertion(+), 8 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:97:12: error: unused variable ‘der’ [-Werror=unused-variable]
   97 |     Node * der = list->current->next;
      |            ^~~
list.c:96:12: error: unused variable ‘izq’ [-Werror=unused-variable]
   96 |     Node * izq = list->current->prev;
      |            ^~~
cc1: all warnings being treated as errors
b59e12b
Thu Mar 26 07:34:31 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
1d0a01e
Thu Mar 26 07:35:34 PM UTC 2026: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
86f86c6
Thu Mar 26 07:38:13 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/60
dd13f9d
Thu Mar 26 07:41:37 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/60
3149dc7
Thu Mar 26 07:43:13 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
a1c2b15
Thu Mar 26 07:44:53 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
598a86a
Thu Mar 26 07:47:46 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
b20095b
Thu Mar 26 07:49:52 PM UTC 2026: 
 tests:  0|0
d06d977
Thu Mar 26 07:53:01 PM UTC 2026: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
56a0bf9
Thu Mar 26 07:53:19 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4567b62
Thu Mar 26 07:53:53 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3311050
Thu Mar 26 07:54:49 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/60
6d3caf8
Thu Mar 26 07:56:18 PM UTC 2026: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:72:12: error: unused variable ‘dato1’ [-Werror=unused-variable]
   72 |     void * dato1 = list->tail->data;
      |            ^~~~~
cc1: all warnings being treated as errors
d1e23a5
Thu Mar 26 07:56:41 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/60
c0e75a4
Thu Mar 26 07:57:58 PM UTC 2026: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  6|3
total_score: 30/60
d647b93
Thu Mar 26 07:59:47 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 40/60
85f15ae
Thu Mar 26 08:02:16 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 40/60
caddba6
Thu Mar 26 08:08:38 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:90:5: error: unknown type name ‘Nodo’; did you mean ‘Node’?
   90 |     Nodo * nuevo = createNode(data);
      |     ^~~~
      |     Node
list.c:90:20: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
   90 |     Nodo * nuevo = createNode(data);
      |                    ^~~~~~~~~~
list.c:91:10: error: request for member ‘next’ in something not a structure or union
   91 |     nuevo->next = list->head;
      |          ^~
list.c:92:22: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
   92 |     list->head->prev = nuevo;
      |                      ^
b5ebbe7
Sun Mar 29 12:59:37 AM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:90:5: error: unknown type name ‘Nodo’; did you mean ‘Node’?
   90 |     Nodo * nuevo = createNode(data);
      |     ^~~~
      |     Node
list.c:90:20: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
   90 |     Nodo * nuevo = createNode(data);
      |                    ^~~~~~~~~~
list.c:91:10: error: request for member ‘next’ in something not a structure or union
   91 |     nuevo->next = list->head;
      |          ^~
list.c:92:22: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
   92 |     list->head->prev = nuevo;
      |                      ^
90626b5
Sun Mar 29 01:00:13 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
576d063
Sun Mar 29 01:05:55 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 40/60
21c47d4
Sun Mar 29 01:07:06 AM UTC 2026: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 40/60
4a418af
Sun Mar 29 01:08:23 AM UTC 2026: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 40/60
3aef3d8
Sun Mar 29 04:58:10 AM UTC 2026: 
 tests:  10|2
total_score: 40/60
73b0b0d
Sun Mar 29 04:58:36 AM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 40/60
0615a47
Sun Mar 29 04:59:16 AM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 50/60
75b4662
Sun Mar 29 06:23:31 AM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:110:12: error: unused variable ‘nuevo’ [-Werror=unused-variable]
  110 |     Node * nuevo = createNode(data);
      |            ^~~~~
cc1: all warnings being treated as errors
a964aef
Sun Mar 29 07:04:40 AM UTC 2026: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:113:25: error: expected identifier before ‘=’ token
  113 |     nuevo->next->prev-> = nuevo;
      |                         ^
7d87c5d
Sun Mar 29 07:05:05 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fb19e00
Sun Mar 29 07:18:04 AM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  11|1
total_score: 50/60
97eecdb
Sun Mar 29 07:19:09 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
cef8cbb
Sun Mar 29 07:23:03 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4f8f1d7
